--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>My Website</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello</h1>
         <script src="script.js"></script>
+        <div id="animationContainer">
+            <div id="myAnimation"></div>
+        </div>
     </body>
 </html>
